# crustyfuzz

./: .gitignore  Cargo.toml  README.md  pyproject.toml
.github/workflows/: CI.yml
bench/: bench.py  benchmark_scorer.py
python/crustyfuzz/: __init__.py  fuzz.pyi
src/: common.rs  distance.rs  fuzz.rs  indel.rs  lcs_seq.rs  lib.rs  main.rs
src/common/: utils.rs
src/distance/: indel.rs  lcs_seq.rs  models.rs
tests/: test_fuzz.py
tests/distance/: test_hamming.py
