[package]
name = "crustyfuzz"
version = "0.1.0"
edition = "2021"

[lib]
name = "crustyfuzz"
crate-type = ["cdylib"]

[dependencies]
num-bigint = "0.4.6"

[dependencies.pyo3]
version = "0.22.5"
# "abi3-py38" tells pyo3 (and maturin) to build using the stable ABI with minimum Python version 3.8
features = ["abi3-py38", "extension-module"]
